--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,9 +1,7 @@
 <h1>Sample App</h1>
 <p>
-	This is the home page for the
+	This is the help page for the
 	<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
 	sample Application.
 </p>
-
-<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
 
